settings page demo

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.2",
+    "@mui/material": "^7.3.2",
     "@tailwindcss/vite": "^4.1.12",
+    "antd": "^5.27.2",
     "axios": "^1.11.0",
     "dotenv": "^17.2.1",
     "lucide-react": "^0.542.0",
